--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,7 @@
       </li>
     </ul>
   </div>
+
   <ng-template #loggedInBlock>
     <div class="navbar-header">
       <button
@@ -48,11 +49,11 @@
                     <div class="nav-bar-selector-building-icon">
                       <img src="assets/images/building.svg" width="20" height="20" />
                     </div>
-                    test
+                    {{ getOrgName(selected) }}
                   </div>
                 </mat-select-trigger>
                 <mat-option *ngFor="let org of organisations" [value]="org.id">
-                  {{ org.name + "www" }}
+                  {{ org.name }}
                 </mat-option>
               </mat-select>
 
