--- a/src/app/applications/applications-list/applications-list-dashboard/applications-list-dashboard.component.html
+++ b/src/app/applications/applications-list/applications-list-dashboard/applications-list-dashboard.component.html
@@ -30,7 +30,7 @@
     [width]="25"
     [matSVGSrc]="'satellite-dish'"
     [type]="'default'"
-    [count]="gateways"
+    [count]="totalGateways"
     [description]="'APPLICATION-INFORMATION-BOX.GATEWAYS' | translate"
   />
 </div>
