--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -25,15 +25,12 @@
       <app-application-filter />
       <app-applications-list-dashboard />
       <div class="switch-content-container">
-        <app-basic-tap-switch [taps]="taps" (newItemEvent)="onNewSwitchIndex($event)"> </app-basic-tap-switch>
-        @switch (index) { @case (1) {
-
+        <app-basic-tap-switch [tabs]="tabs"> </app-basic-tap-switch>
+        @if(router.url === mapRoute){
         <app-application-map></app-application-map>
-        } @default {
-
+        } @if(router.url === listRoute){
         <app-applications-table [organizationId]="organizationId" *ngIf="organizationId"></app-applications-table>
-
-        } }
+        }
       </div>
     </ng-container>
   </ng-container>
