--- a/src/app/navbar/global-admin/global-admin.component.scss
+++ b/src/app/navbar/global-admin/global-admin.component.scss
@@ -20,12 +20,9 @@ button:focus,
   padding: 10px 15px;
   font-weight: 500;
   border-radius: 3px;
-  margin-left: 10px;
-  margin-right: 10px;
   height: 33px;
   line-height: 14px;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin: 2px 10px;
 
   &:hover,
   &.link-hover,
