--- a/src/app/shared/components/basic-information-box/basic-information-box.component.scss
+++ b/src/app/shared/components/basic-information-box/basic-information-box.component.scss
@@ -56,7 +56,7 @@
   line-height: 15px;
 }
 
-.icon-continer {
+.icon-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
