--- a/src/app/applications/applications-list/application-map/application-map.component.html
+++ b/src/app/applications/applications-list/application-map/application-map.component.html
@@ -1,15 +1,5 @@
 <div class="map-page">
   @if(coordinateList){
-  <app-map [coordinateList]="coordinateList" [isFromApplication]="true" [applicationId]="22"></app-map>
+  <app-map [coordinateList]="coordinateList" [isFromApplication]="true"></app-map>
   }
-  <div class="map-overlay">
-    <div class="check-box-container">
-      <mat-checkbox class="example-margin" [checked]="device" />
-      <div>{{ "APPLICATION-INFORMATION-BOX.DEVICES" | translate }}</div>
-    </div>
-    <div class="check-box-container">
-      <mat-checkbox class="example-margin" [checked]="gateway" />
-      <div>{{ "APPLICATION-INFORMATION-BOX.GATEWAYS" | translate }}</div>
-    </div>
-  </div>
 </div>
