--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -40,7 +40,7 @@
           <div class="options-container">
             <app-option-field
               [title]="'APPLICATION.STATUS.' + application.status | translate"
-              [type]="application.status === 'IN-OPERATION' ? 'warring' : ''"
+              [type]="application.status === 'IN-OPERATION' ? 'warning' : 'default'"
             />
           </div>
         </td>
@@ -73,7 +73,6 @@
           <app-table-sort-icon [sortDirection]="getSortDirection('data')" />
         </th>
         <td mat-cell *matCellDef="let application">
-          <!-- TODO:: add @for when data is found  -->
           <div class="options-container">
             @for (property of application.controlledProperties; track $index) {
             <app-option-field [title]="property.type" />
