--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
 
 .nav-bar-title {
   color: $default-color;
-  font-size: 14;
+  font-size: 14px;
   font-weight: 400;
   font-family: "Inter", sans-serif;
   margin-top: 40px;
@@ -80,12 +80,9 @@ button:focus,
   padding: 10px 15px;
   font-weight: 500;
   border-radius: 3px;
-  margin-left: 10px;
-  margin-right: 10px;
   height: 33px;
   line-height: 14px;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin: 2px 10px;
 
   &:hover,
   &.link-hover,
