--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -13,27 +13,28 @@
   </header>
 </ng-template>
 <app-top-bar
-  [title]="'NAV.APPLICATIONS' | translate"
+  [canEdit]="canEdit"
   [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
   [ctaRouterLink]="'new-application'"
-  [canEdit]="canEdit"
+  [title]="'NAV.APPLICATIONS' | translate"
 >
 </app-top-bar>
 <div class="main-page d-flex flex-column">
   <ng-container *ngIf="!isLoadingResults">
     <ng-container *ngIf="hasSomePermission" ; else noPermissions>
-      <app-application-filter />
-      <app-applications-list-dashboard />
+      <app-application-filter/>
+      <app-applications-list-dashboard/>
       <div class="switch-content-container">
-        <app-basic-tap-switch [tabs]="tabs" [currentUrl]="currentPath" (tabClicked)="onTapClicked($event)">
-        </app-basic-tap-switch>
-        @if(currentPath === mapRoute){
-        <app-application-map></app-application-map>
-        } @if(currentPath === listRoute){
-        <app-applications-table [organizationId]="organizationId" *ngIf="organizationId"></app-applications-table>
+        <app-basic-tab-switch (tabClicked)="onTapClicked($event)" [currentUrl]="currentPath" [tabs]="tabs">
+        </app-basic-tab-switch>
+        @if (currentPath === mapRoute) {
+          <app-application-map></app-application-map>
+        }
+        @if (currentPath === listRoute) {
+          <app-applications-table [organizationId]="organizationId" *ngIf="organizationId"></app-applications-table>
         }
       </div>
     </ng-container>
   </ng-container>
-  <mat-spinner ngClass="align-self-center" *ngIf="isLoadingResults"></mat-spinner>
+  <mat-spinner *ngIf="isLoadingResults" ngClass="align-self-center"></mat-spinner>
 </div>
