--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -1,4 +1,4 @@
-<div class="loading-shade" *ngIf="isLoadingResults">
+<div *ngIf="isLoadingResults" class="loading-shade">
   <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
 </div>
 <div *ngIf="errorMessage" class="error-messages p-3 m-2">
@@ -8,35 +8,35 @@
 <div class="table-container">
   <div class="table-container">
     <table
-      mat-table
+      (matSortChange)="announceSortChange($event)"
       [dataSource]="data"
       class="mat-elevation-z0"
+      mat-table
       matSort
       matSortActive="name"
-      matSortDisableClear
       matSortDirection="asc"
-      (matSortChange)="announceSortChange($event)"
+      matSortDisableClear
     >
       <ng-container matColumnDef="statusCheck">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'statusCheck' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.STATUS" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('statusCheck')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('statusCheck')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
-          <app-status-icon [iconType]="application.statusCheck" />
+        <td *matCellDef="let application" mat-cell>
+          <app-status-icon [iconType]="application.statusCheck"/>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'status' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.STATE" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('status')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('status')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           <div class="options-container">
             <app-option-field
               [title]="'APPLICATION.STATUS.' + application.status | translate"
@@ -47,13 +47,13 @@
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'name' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.NAME" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('name')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('name')"/>
         </th>
-        <td mat-cell *matCellDef="let element" class="name-and-description">
+        <td *matCellDef="let element" class="name-and-description" mat-cell>
           <div class="name-and-description">
             <div class="application-name">
               {{ element.name }}
@@ -66,41 +66,41 @@
       </ng-container>
 
       <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'data' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.CONTROLLED-PROPERTIES" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('data')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('data')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           <div class="options-container">
             @for (property of application.controlledProperties; track $index) {
-            <app-option-field [title]="property.type" />
+              <app-option-field [title]="property.type"/>
             }
           </div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="devices">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'devices' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.IOT-DEVICES" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('devices')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('devices')"/>
         </th>
-        <td mat-cell *matCellDef="let element">
+        <td *matCellDef="let element" mat-cell>
           {{ element?.iotDevices?.length ?? 0 }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="owner">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'owner' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.OWNER" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('owner')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('owner')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ application.owner ?? "-" }}
         </td>
       </ng-container>
@@ -108,143 +108,145 @@
       <!-- Not default columns -->
 
       <ng-container matColumnDef="contactPerson">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'contactPerson' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.CONTACT-PERSON" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('contactPerson')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('contactPerson')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ application.contactPerson ?? "-" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="dataTargets">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'dataTargets' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.DATA-TARGETS" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('dataTargets')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('dataTargets')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ application?.dataTargets?.length ?? 0 }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="openDataDkEnabled">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div
             [ngClass]="this.sort.active === 'openDataDkEnabled' ? 'column-title-color' : 'column-title-color-inactive'"
           >
             {{ "APPLICATION-TABLE.OPEN-DATA-DK" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('openDataDkEnabled')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('openDataDkEnabled')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ isOpenDataDK(application.dataTargets) | yesNo }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="personalData">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th *matHeaderCellDef mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'personalData' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.PERSONAL-DATA" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('personalData')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('personalData')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           <fa-icon *ngIf="application.personalData" [icon]="faFlagIcon" class="flag-icon"></fa-icon>
           {{ !application.personalData ? "-" : "" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="startDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
+        <th *matHeaderCellDef class="col-1" mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'startDate' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.START-DATE" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('startDate')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('startDate')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ (application.startDate | dateOnly) ?? "-" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="endDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
+        <th *matHeaderCellDef class="col-1" mat-header-cell mat-sort-header>
           <div [ngClass]="this.sort.active === 'endDate' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.END-DATE" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('endDate')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('endDate')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ (application.endDate | dateOnly) ?? "-" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef class="col-1">
+        <th *matHeaderCellDef class="col-1" mat-header-cell>
           <div [ngClass]="this.sort.active === 'category' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.CATEGORY" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('category')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('category')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ application.category ?? "-" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="deviceTypes">
-        <th mat-header-cell *matHeaderCellDef class="col-1">
+        <th *matHeaderCellDef class="col-1" mat-header-cell>
           <div [ngClass]="this.sort.active === 'deviceTypes' ? 'column-title-color' : 'column-title-color-inactive'">
             {{ "APPLICATION-TABLE.DEVICE-TYPES" | translate }}
           </div>
-          <app-table-sort-icon [sortDirection]="getSortDirection('deviceTypes')" />
+          <app-table-sort-icon [sortDirection]="getSortDirection('deviceTypes')"/>
         </th>
-        <td mat-cell *matCellDef="let application">
+        <td *matCellDef="let application" mat-cell>
           {{ mapDeviceTypes(application.deviceTypes) ?? "-" }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="menu">
-        <th mat-header-cell *matHeaderCellDef class="col-1"></th>
+        <th *matHeaderCellDef class="col-1" mat-header-cell></th>
 
-        <td mat-cell *matCellDef="let element">
-          <div class="dropdown" *ngIf="element?.id | canEditApplication">
+        <td *matCellDef="let element" mat-cell>
+          <div *ngIf="element?.id | canEditApplication" class="dropdown">
             <a
-              href="#"
-              role="button"
-              id="tableRowDropdown-{{ element.id }}"
+              [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"
+              aria-expanded="false"
               class="applicationRow__edit dropdown-toggle"
               data-toggle="dropdown"
-              aria-expanded="false"
-              [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"
+              href="#"
+              id="tableRowDropdown-{{ element.id }}"
+              role="button"
             ></a>
-            <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
+            <ul attr.aria-labelledby="tableRowDropdown-{{ element.id }}" class="dropdown-menu dropdown-menu--table">
               <li class="dropdown-item">
                 <a (click)="navigateToEditPage(element.id)" routerLinkActive="active">{{
-                  "APPLICATION-TABLE-ROW.EDIT" | translate
-                }}</a>
+                    "APPLICATION-TABLE-ROW.EDIT" | translate
+                  }}</a>
               </li>
               <li class="dropdown-item">
                 <a (click)="onOpenChangeOrganizationDialog(element.id)" routerLinkActive="active">{{
-                  "APPLICATION.CHANGE-ORGANIZATION.TITLE" | translate
-                }}</a>
+                    "APPLICATION.CHANGE-ORGANIZATION.TITLE" | translate
+                  }}</a>
               </li>
               <li class="dropdown-item">
                 <a (click)="deleteApplication(element.id)" [routerLink]="[]">{{
-                  "APPLICATION-TABLE-ROW.DELETE" | translate
-                }}</a>
+                    "APPLICATION-TABLE-ROW.DELETE" | translate
+                  }}</a>
               </li>
             </ul>
           </div>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns" [routerLink]="['/applications', row.id]"></tr>
+      <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+      <tr *matRowDef="let row; columns: displayedColumns" [routerLink]="['/applications', row.id]"
+          class="table-row-pointer"
+          mat-row></tr>
     </table>
-    <mat-paginator class="paginator" [length]="resultsLength" [pageSizeOptions]="pageSizeOptions"> </mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSizeOptions]="pageSizeOptions" class="paginator"></mat-paginator>
   </div>
   <div class="tool-container">
     <app-column-selector
@@ -255,5 +257,5 @@
   </div>
 </div>
 <div>
-  <app-table-paginator [paginator]="paginator" />
+  <app-table-paginator [paginator]="paginator"/>
 </div>
