--- a/src/app/shared/components/basic-tab-switch/basic-tab-switch.component.scss
+++ b/src/app/shared/components/basic-tab-switch/basic-tab-switch.component.scss
@@ -14,10 +14,15 @@
   justify-content: center;
   font-size: 16px;
   padding: 0 20px;
+  cursor: pointer;
+}
+
+.tab-base:hover {
+  background-color: $white;
 }
 
 .active-tab {
-  background-color: $white !important;
+  background-color: $white;
   color: $default-icon-color;
   fill: $default-icon-color;
 }
@@ -25,7 +30,7 @@
 .inactive-tab {
   fill: $color-link !important;
   color: $color-link;
-  background-color: transparent !important;
+  background-color: transparent;
 }
 
 .active-tab-icon {
