Add sort arrow back

--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -5,7 +5,7 @@
   {{ errorMessage | translate }}
 </div>
 <div class="main-container-table mat-elevation-z0"></div>
-<div class="table-container">
+<div class="table-container applications-table">
   <div class="table-container">
     <table
       (matSortChange)="announceSortChange($event)"
