Fix application map filter

--- a/src/app/applications/applications-list/application-map/application-map.component.html
+++ b/src/app/applications/applications-list/application-map/application-map.component.html
@@ -1,5 +1,11 @@
 <div class="map-page">
-  @if(coordinateList){
-  <app-map [coordinateList]="coordinateList" [isFromApplication]="true"></app-map>
+  @if (coordinateList) {
+    <app-map [coordinateList]="coordinateList" [isFromApplication]="true"></app-map>
   }
+  <mat-checkbox (change)="mapToCoordinateList()" [(ngModel)]="displayDevices">
+    Devices
+  </mat-checkbox>
+  <mat-checkbox (change)="mapToCoordinateList()" [(ngModel)]="displayGateways">
+    Gateways
+  </mat-checkbox>
 </div>
