--- a/src/app/applications/applications-list/application-map/application-map.component.scss
+++ b/src/app/applications/applications-list/application-map/application-map.component.scss
@@ -3,6 +3,7 @@
 :host .map-page {
   background-color: #ffffff;
   padding: 20px;
+  padding-bottom: 40px;
   height: 600px;
   position: relative;
 }
