Fix some colors and font sizes

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav
   aria-expanded="false"
-  class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-3"
+  class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-3 no-shadow"
 >
   <img [src]="imagePath" alt="OS2IoT-logo" class="img-logo"/>
 
